environments/dev/apps/app-gitops-service/services/gitops-service/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: gitops-service
    app.kubernetes.io/part-of: app-gitops-service
  name: gitops-service
  namespace: dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: gitops-service
    app.kubernetes.io/part-of: app-gitops-service
status:
  loadBalancer: {}
