environments/dev/apps/app-gitops-service/services/gitops-service/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: gitops-service
  namespace: dev
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: gitops-service
    weight: 100
  wildcardPolicy: None
